--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* global */
-.grid-2{
+.grid1{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: 33.33% auto;
 }
 
 body{
@@ -29,19 +29,19 @@ a{
 
 /* section 1 */
 .section-1{
-    padding-top: 10vh;
+    padding-top: 20vh;
     text-align: center;
 }
 
 .section-1 p{
     font-size: 1.1rem;
-    padding-bottom: 10px;
+    padding-bottom: 26px;
     margin:0;
 }
 
 .section-1 h2{
     font-size: 1.7rem;
-    margin-bottom: 22px;
+    margin-bottom: 8px;
 }
 
 .section-1 a{
@@ -50,8 +50,8 @@ a{
 }
 /* section 2 */
 .section-2{
-    padding-top: 8%;
-    width: 70%;
+    padding-top: 4%;
+    width: 100%;
 }
 
 .section-2 h2{
@@ -65,44 +65,25 @@ a{
     margin:0;
 }
 
-.section-2 a{
-    display: block;
-    padding: 5px;
-    font-size: 1.2rem;
-    padding-left: 0;
-    width: 100px;
-}
-/* animations / utilities */
-.section-2 a:hover{
-    font-size: 1.2rem;
-    color: #fff;
-    cursor: pointer;
-    transition: 0.2s;
-}
-
-.section-1 a:hover{
-    filter: brightness(1.75);
-    cursor: pointer;
-    transition: 0.2s;
-}
-
 .white:hover{
     position: relative;
     padding-left: 10px;
 }
 
-/* media queres */
-@media(max-width:780px){
-    .grid-2{
-        grid-template-columns: 1fr;
-    }
-    .section-1{
-        padding:0;
-        padding-top: 5rem;
-    }
-    .section-2{
-        padding: 0;
-        padding-left: 1.5rem;
-        padding-top: 2rem;
-    }
+/* gallery */
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item {
+    margin: 3px 5px;
+}
+
+/* bs */
+@media only screen and (max-width: 800px) {
+ .grid1{
+    display: grid;
+    grid-template-columns: 100%;
+ }
 }
