--- a/style.css
+++ b/style.css
@@ -77,7 +77,15 @@ a{
 }
 
 .item {
-    margin: 3px 5px;
+    border-style: solid;
+    border-width: 4px;
+    border-color: rgba(0,0,0,0);
+    margin: 0px 2px;
+}
+
+.item:hover {
+    border-color: white;
+    transition: 0.2s;
 }
 
 /* bs */
