--- a/style.css
+++ b/style.css
@@ -56,7 +56,10 @@ a{
 
 /* section 2 */
 .section-2{
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 4%;
+    text-indent: 10%;
     width: 100%;
 }
 
@@ -73,8 +76,10 @@ a{
 
 /* gallery */
 .container {
+    text-indent: 0%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .item {
